feat: add `Advantages` section and update `Intro` section

--- a/index.html
+++ b/index.html
@@ -41,13 +41,79 @@
   <main class="main">
     <section class="intro">
       <div class="intro__container container">
-        <h1 class="intro__title">Tworzenie<br>
-          <span class="intro__title-box-dash slide-in-left">
-            <span class="intro__title-box-inner">stron</span>
-          </span><br>
-          internetowych<br>
-        </h1>
-        <p class="intro__description">które pomogą Ci wypromować się w Internecie</p>
+        <div class="intro__text-container">
+          <h1 class="intro__title">Tworzenie<br>
+            <span class="intro__title-box-dash">
+              <span class="intro__title-box-inner">stron</span>
+            </span><br>
+            internetowych<br>
+          </h1>
+          <p class="intro__description">które pomogą Ci wypromować się w Internecie</p>
+        </div>
+        <img class="intro__image" loading="lazy" src="/src/assets/svg/intro-image.svg" alt="image">
+      </div>
+    </section>
+    <section class="advantages">
+      <div class="advantages__container container">
+        <h2 class="advantages__title">Kompleksowe rozwiązanie dla Twojego biznesu</h2>
+        <ul class="advantages__cards-container">
+          <li class="advantages__card">
+            <div class="advantages__card-icon icon-domain"></div>
+            <h3 class="advantages__card-title">Domena, hosting i certyfikat bezpieczeństwa</h3>
+            <p class="advantages__card-description">Pomagamy w wyborze idealnej nazwy domeny i zapewniamy niezawodny
+              hosting, oraz certyfikat bezpieczeństwa SSL,
+              gwarantując stabilność i bezpieczeństwo Twojej witryny przez cały rok.
+            </p>
+          </li>
+          <li class="advantages__card">
+            <div class="advantages__card-icon icon-ui"></div>
+            <h3 class="advantages__card-title">Tworzenie stron na miarę</h3>
+            <p class="advantages__card-description">Nasze projekty są całkowicie autorskie – unikamy gotowych
+              konstruktorów stron i narzędzi typu Elementor w WordPress, co
+              pozwala nam na pełną personalizację i optymalizację wydajności. Dzięki temu Twoja strona będzie nie tylko
+              unikalna, ale
+              również szybka i zoptymalizowana pod kątem SEO, co przekłada się na lepszą widoczność w wyszukiwarkach.
+            </p>
+          </li>
+          <li class="advantages__card">
+            <div class="advantages__card-icon icon-design"></div>
+            <h3 class="advantages__card-title">Personalizacja bez granic</h3>
+            <p class="advantages__card-description">Twoja strona może być dowolnie modyfikowana i urozmaicona o
+              różnorodne funkcje – od slajdów i galerii zdjęć, przez
+              formularze kontaktowe, po interaktywne mapki. Wszystko, czego potrzebujesz, zostanie zaprojektowane i
+              zaimplementowane
+              zgodnie z Twoimi wymaganiami, aby idealnie odpowiadało potrzebom Twojej firmy.</p>
+          </li>
+          <li class="advantages__card">
+            <div class="advantages__card-icon icon-cms"></div>
+            <h3 class="advantages__card-title">Integracja strony z systemem zarządzania treścią</h3>
+            <p class="advantages__card-description">Twoja strona zostanie przeniesiona na WordPress, zapewniając
+              elastyczność i prostotę zarządzania dzięki dostępowi do
+              panelu administratora. Umożliwi to bieżące dostosowywanie treści do aktualnych wymagań biznesowych.
+              Samodzielne
+              aktualizacje i modyfikacje są teraz na wyciągnięcie ręki, wspierając rozwój Twojej firmy.</p>
+          </li>
+          <li class="advantages__card">
+            <div class="advantages__card-icon icon-protected"></div>
+            <h3 class="advantages__card-title">Zgodność z prawem</h3>
+            <p class="advantages__card-description">Dostosowanie strony do wymogów RODO, z pełnym pakietem informacji o
+              plikach cookies i prawach autorskich.</p>
+          </li>
+          <li class="advantages__card">
+            <div class="advantages__card-icon icon-phone"></div>
+            <h3 class="advantages__card-title">Mobilność i dostępność</h3>
+            <p class="advantages__card-description">Twoja strona będzie wyświetlała się perfekcyjnie na każdym
+              urządzeniu, od smartfonów po tablety, co jest kluczowe w
+              dzisiejszym mobilnym świecie.</p>
+          </li>
+          <li class="advantages__card">
+            <div class="advantages__card-icon icon-mail"></div>
+            <h3 class="advantages__card-title">Firmowe adresy email</h3>
+            <p class="advantages__card-description">Stworzymy dla Ciebie i Twojej firmy profesjonalne adresy email,
+              zawierające nazwę Twojej domeny, co buduje zaufanie i
+              profesjonalny wizerunek w oczach klientów.</p>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
