--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
       <label class="header__burger-menu" for="burger-checkbox"></label>
     </div>
   </header>
+
   <main class="main">
+
     <section class="intro">
-      <div class="intro__container container">
+      <div class="intro__container">
         <div class="intro__text-container">
           <h1 class="intro__title">Tworzenie<br>
             <span class="intro__title-box-dash">
@@ -48,74 +50,184 @@
             </span><br>
             internetowych<br>
           </h1>
-          <p class="intro__description">które pomogą Ci wypromować się w Internecie</p>
+          <p class="intro__description">które pomogą Państwu wypromować się w Internecie</p>
         </div>
         <img class="intro__image" loading="lazy" src="/src/assets/svg/intro-image.svg" alt="image">
       </div>
     </section>
+
     <section class="advantages">
-      <div class="advantages__container container">
-        <h2 class="advantages__title">Kompleksowe rozwiązanie dla Twojego biznesu</h2>
+      <div class="advantages__container">
+        <h2 class="advantages__title">Kompleksowe rozwiązanie dla Państwa biznesu</h2>
+        <p class="advantages__description">Państwa strona internetowa to wizytówka Państwa biznesu w
+          sieci. Dbamy o
+          każdy aspekt, by zapewnić jej sukces
+          i
+          promocję. Nasze podejście do tworzenia stron gwarantuje, że Państwa strona będzie nie tylko atrakcyjna
+          wizualnie, ale
+          również funkcjonalna, bezpieczna i zoptymalizowana pod kątem wyszukiwarek.</p>
         <ul class="advantages__cards-container">
           <li class="advantages__card">
-            <div class="advantages__card-icon icon-domain"></div>
-            <h3 class="advantages__card-title">Domena, hosting i certyfikat bezpieczeństwa</h3>
-            <p class="advantages__card-description">Pomagamy w wyborze idealnej nazwy domeny i zapewniamy niezawodny
-              hosting, oraz certyfikat bezpieczeństwa SSL,
-              gwarantując stabilność i bezpieczeństwo Twojej witryny przez cały rok.
+            <div class="advantages__card-icon advantages__card-icon--domain"></div>
+            <h3 class="advantages__card-title">Wybór domeny, niezawodny hosting i bezpieczeństwo</h3>
+            <p class="advantages__card-description">Pomagamy w wyborze idealnej nazwy domeny dla Państwa strony,
+              zapewniamy niezawodny hosting oraz gwarantujemy
+              bezpieczeństwo dzięki certyfikatowi SSL. Jest to fundament stabilnej pracy Państwa strony przez całą dobę.
+              Roczne korzystanie z wymienionych usług wchodzi w skład ceny świadczonej usługi.
             </p>
           </li>
           <li class="advantages__card">
-            <div class="advantages__card-icon icon-ui"></div>
-            <h3 class="advantages__card-title">Tworzenie stron na miarę</h3>
-            <p class="advantages__card-description">Nasze projekty są całkowicie autorskie – unikamy gotowych
-              konstruktorów stron i narzędzi typu Elementor w WordPress, co
-              pozwala nam na pełną personalizację i optymalizację wydajności. Dzięki temu Twoja strona będzie nie tylko
-              unikalna, ale
-              również szybka i zoptymalizowana pod kątem SEO, co przekłada się na lepszą widoczność w wyszukiwarkach.
+            <div class="advantages__card-icon advantages__card-icon--ui"></div>
+            <h3 class="advantages__card-title">Indywidualne tworzenie stron internetowych</h3>
+            <p class="advantages__card-description">Projektujemy strony od podstaw, unikając ograniczeń narzuconych
+              przez gotowe szablony i konstruktory. Daje to pełną
+              swobodę w realizacji Państwa unikalnej wizji designu i funkcjonalności, zapewniając wysoką szybkość
+              ładowania i
+              optymalizację pod SEO. Państwa strona nie tylko będzie się wyróżniać, ale także łatwiej znajdzie się w
+              wyszukiwarkach,
+              przyciągając więcej odwiedzających.
             </p>
           </li>
           <li class="advantages__card">
-            <div class="advantages__card-icon icon-design"></div>
-            <h3 class="advantages__card-title">Personalizacja bez granic</h3>
-            <p class="advantages__card-description">Twoja strona może być dowolnie modyfikowana i urozmaicona o
-              różnorodne funkcje – od slajdów i galerii zdjęć, przez
-              formularze kontaktowe, po interaktywne mapki. Wszystko, czego potrzebujesz, zostanie zaprojektowane i
-              zaimplementowane
-              zgodnie z Twoimi wymaganiami, aby idealnie odpowiadało potrzebom Twojej firmy.</p>
+            <div class="advantages__card-icon advantages__card-icon--design"></div>
+            <h3 class="advantages__card-title">Nielimitowana personalizacja</h3>
+            <p class="advantages__card-description">Państwa strona może być wzbogacona o dowolne funkcje, od pokazów
+              slajdów i galerii, po formularze kontaktowe i
+              interaktywne mapy. Każdy element jest starannie projektowany zgodnie z Państwa życzeniami, aby strona
+              idealnie
+              odpowiadała potrzebom Państwa firmy.</p>
           </li>
           <li class="advantages__card">
-            <div class="advantages__card-icon icon-cms"></div>
+            <div class="advantages__card-icon advantages__card-icon--cms"></div>
             <h3 class="advantages__card-title">Integracja strony z systemem zarządzania treścią</h3>
-            <p class="advantages__card-description">Twoja strona zostanie przeniesiona na WordPress, zapewniając
-              elastyczność i prostotę zarządzania dzięki dostępowi do
-              panelu administratora. Umożliwi to bieżące dostosowywanie treści do aktualnych wymagań biznesowych.
-              Samodzielne
-              aktualizacje i modyfikacje są teraz na wyciągnięcie ręki, wspierając rozwój Twojej firmy.</p>
+            <p class="advantages__card-description">Wykorzystujemy WordPress, aby ułatwić zarządzanie Państwa stroną,
+              oferując dostęp do intuicyjnego panelu
+              administracyjnego. Pozwala to na samodzielne aktualizacje i modyfikacje treści, wspierając rozwój Państwa
+              biznesu.</p>
           </li>
           <li class="advantages__card">
-            <div class="advantages__card-icon icon-protected"></div>
-            <h3 class="advantages__card-title">Zgodność z prawem</h3>
-            <p class="advantages__card-description">Dostosowanie strony do wymogów RODO, z pełnym pakietem informacji o
-              plikach cookies i prawach autorskich.</p>
+            <div class="advantages__card-icon advantages__card-icon--protected"></div>
+            <h3 class="advantages__card-title">Zgodność z przepisami prawnymi</h3>
+            <p class="advantages__card-description">Zapewniamy, że Państwa strona będzie w pełni zgodna z wymogami RODO,
+              zawierając kompletny pakiet informacji o plikach cookie i prawach autorskich.</p>
           </li>
           <li class="advantages__card">
-            <div class="advantages__card-icon icon-phone"></div>
-            <h3 class="advantages__card-title">Mobilność i dostępność</h3>
-            <p class="advantages__card-description">Twoja strona będzie wyświetlała się perfekcyjnie na każdym
+            <div class="advantages__card-icon advantages__card-icon--phone"></div>
+            <h3 class="advantages__card-title">Optymalizacja mobilna</h3>
+            <p class="advantages__card-description">Państwa strona będzie perfekcyjnie wyświetlać się na każdym
               urządzeniu, od smartfonów po tablety, co jest kluczowe w
-              dzisiejszym mobilnym świecie.</p>
+              dzisiejszym świecie mobilnym.</p>
           </li>
           <li class="advantages__card">
-            <div class="advantages__card-icon icon-mail"></div>
-            <h3 class="advantages__card-title">Firmowe adresy email</h3>
-            <p class="advantages__card-description">Stworzymy dla Ciebie i Twojej firmy profesjonalne adresy email,
-              zawierające nazwę Twojej domeny, co buduje zaufanie i
+            <div class="advantages__card-icon advantages__card-icon--mail"></div>
+            <h3 class="advantages__card-title">Profesjonalne adresy e-mail firmowe</h3>
+            <p class="advantages__card-description">Stworzymy dla Państwa i Państwa firmy profesjonalne adresy e-mail z
+              Państwa nazwą domeny, co zbuduje zaufanie i wzmocni
               profesjonalny wizerunek w oczach klientów.</p>
+          </li>
+          <li class="advantages__card">
+            <div class="advantages__card-icon advantages__card-icon--service"></div>
+            <h3 class="advantages__card-title">Wsparcie i aktualizacje</h3>
+            <p class="advantages__card-description">Zapewniamy opcję wsparcia technicznego i regularnych aktualizacji za
+              dodatkową opłatą, gwarantując
+              aktualność Państwa strony zgodnie z najnowszymi trendami i standardami.</p>
           </li>
         </ul>
       </div>
     </section>
+
+    <section class="timeline">
+      <div class="timeline__container">
+        <h2 class="timeline__title">Realizacja Państwa projektu:<br>Etapy tworzenia strony internetowej
+        </h2>
+        <ul class="timeline__items">
+
+          <li class="timeline__item">
+            <div class="timeline__point"></div>
+            <div class="timeline__content">
+              <h3 class="timeline__content-title">Wstępny brief i analiza potrzeb</h3>
+              <p class="timeline__content-description">Pierwszym krokiem jest przeprowadzenie briefu, podczas którego
+                zrozumiemy Państwa oczekiwania i cele biznesowe.
+              </p>
+            </div>
+          </li>
+
+          <li class="timeline__item">
+            <div class="timeline__point"></div>
+            <div class="timeline__content">
+              <h3 class="timeline__content-title">Realizacja przedpłaty</h3>
+              <p class="timeline__content-description">Następnie przygotowujemy i wysyłamy fakturę na 50% wartości
+                usług. Po potwierdzeniu dokonania przedpłaty przechodzimy do
+                kolejnych etapów realizacji projektu.
+              </p>
+            </div>
+          </li>
+
+          <li class="timeline__item">
+            <div class="timeline__point"></div>
+            <div class="timeline__content">
+              <h3 class="timeline__content-title">Przeprowadzenie szczegółowego badania i planowania</h3>
+              <p class="timeline__content-description">Na tym etapie zbieramy od Państwa informacje dotyczące
+                preferencji strony internetowej.
+              </p>
+            </div>
+          </li>
+
+          <li class="timeline__item">
+            <div class="timeline__point"></div>
+            <div class="timeline__content">
+              <h3 class="timeline__content-title">Opracowanie wizualnej koncepcji strony</h3>
+              <p class="timeline__content-description">Przygotowujemy detaliczny projekt graficzny, uwzględniający
+                wszystkie elementy interfejsu użytkownika. Dokonujemy
+                ewentualnych korekt.
+              </p>
+            </div>
+          </li>
+
+          <li class="timeline__item">
+            <div class="timeline__point"></div>
+            <div class="timeline__content">
+              <h3 class="timeline__content-title">Kodowanie</h3>
+              <p class="timeline__content-description">Przekształcamy zatwierdzony projekt w działającą stronę
+                internetową oraz integrujemy stronę z systemem zarządzania
+                treścią.
+            </div>
+          </li>
+
+          <li class="timeline__item">
+            <div class="timeline__point"></div>
+            <div class="timeline__content">
+              <h3 class="timeline__content-title">Testowanie i optymalizacja</h3>
+              <p class="timeline__content-description">Przeprowadzamy weryfikację funkcjonalności, użyteczności oraz
+                wydajności strony.
+              </p>
+            </div>
+          </li>
+
+          <li class="timeline__item">
+            <div class="timeline__point"></div>
+            <div class="timeline__content">
+              <h3 class="timeline__content-title">Uruchomienie strony</h3>
+              <p class="timeline__content-description">Oficjalnie wprowadzamy stronę do użytku publicznego pod wybraną
+                domeną na wyselekcjonowanym hostingu.
+              </p>
+            </div>
+          </li>
+
+          <li class="timeline__item">
+            <div class="timeline__point"></div>
+            <div class="timeline__content">
+              <h3 class="timeline__content-title">Finalizacja płatności i przekazanie projektu</h3>
+              <p class="timeline__content-description">Uregulowujemy pozostałą kwotę i przekazujemy Państwu wszystkie
+                niezbędne zasoby.
+              </p>
+            </div>
+          </li>
+
+        </ul>
+      </div>
+    </section>
+
   </main>
   <script type="module" src="/src/main.ts"></script>
 </body>
