feat: add `Promo` section

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="pl">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preload" href="/src/assets/fonts/Poppins-Light.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/src/assets/fonts/Poppins-Regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/src/assets/fonts/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/src/assets/fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="alternate" hreflang="pl" href="https://fulldev.pl/" />
-  <link rel="alternate" hreflang="ua" href="https://fulldev.pl/ua" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="alternate" hreflang="pl" href="https://fulldev.pl/">
+  <link rel="alternate" hreflang="uk" href="https://fulldev.pl/uk">
   <title>Full Development | Projektowanie stron internetowych</title>
 </head>
 
@@ -225,6 +225,15 @@
           </li>
 
         </ul>
+      </div>
+    </section>
+
+    <section class="promo">
+      <div class="promo__container">
+        <h4 class="promo__title">Zachęcamy do kontaktu z nami, abyśmy mogli wspólnie pracować nad realizacją Państwa
+          marzeń o doskonałej stronie
+          internetowej</h4>
+        <a class="promo__button" href="#contact">Kontakt</a>
       </div>
     </section>
 
