--- a/index.html
+++ b/index.html
@@ -237,6 +237,9 @@
       </div>
     </section>
 
+    <footer class="footer">
+      <p class="footer__copyright">©2023-2024 Full Development</p>
+    </footer>
   </main>
   <script type="module" src="/src/main.ts"></script>
 </body>
