fix: change ukrainian language abbreviation to `uk`

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li class="header__menu-item">
             <a class="header__menu-link header__main-language" href="javascript:void(0)">PL</a>
             <div class="header__dropdown-content">
-              <a class="header__second-language" href="/ua">UA</a>
+              <a class="header__second-language" href="/uk">UA</a>
             </div>
           </li>
         </ul>
