feat: add meta and link tags

--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
   <link rel="preload" href="/src/assets/fonts/Poppins-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/src/assets/fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="canonical" href="https://fulldev.pl/">
   <link rel="alternate" hreflang="pl" href="https://fulldev.pl/">
   <link rel="alternate" hreflang="uk" href="https://fulldev.pl/uk">
-  <title>Full Development | Projektowanie stron internetowych</title>
+  <title>Full Development</title>
+  <meta name="description" content="Projektowanie stron internetowych">
+  <meta name="robots" content="index, follow">
+
+  <meta property="og:title" content="Full Development">
+  <meta property="og:description" content="Projektowanie stron internetowych">
+  <meta property="og:image" content="https://fulldev.pl/page.png">
+  <meta property="og:url" content="https://fulldev.pl/">
+
+  <meta name="author" content="Volodymyr Koshlai Full Development">
+  <meta name="copyright" content="Copyright 2024">
+
 </head>
 
 <body>
