feat: add contact page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <link rel="canonical" href="https://fulldev.pl/">
   <link rel="alternate" hreflang="pl" href="https://fulldev.pl/">
-  <link rel="alternate" hreflang="uk" href="https://fulldev.pl/uk">
+  <link rel="alternate" hreflang="uk" href="https://fulldev.pl/uk/">
   <title>Full Development</title>
   <meta name="description" content="Projektowanie stron internetowych">
   <meta name="robots" content="index, follow">
@@ -37,7 +37,8 @@
           <li class="header__menu-item"><a class="header__menu-link" href="javascript:void(0)">Główna</a></li>
           <li class="header__menu-item"><a class="header__menu-link" href="/projects">Projekty</a></li>
           <li class="header__menu-item"><a class="header__menu-link" href="/offer">Oferta</a></li>
-          <li class="header__menu-item"><a class="header__menu-link" href="/contact">Kontakt</a></li>
+          <li class="header__menu-item"><a class="header__menu-link" href="contact.html">Kontakt</a>
+          </li>
           <li class="header__menu-item">
             <a class="header__menu-link header__main-language" href="javascript:void(0)">PL</a>
             <div class="header__dropdown-content">
@@ -245,14 +246,15 @@
         <h4 class="promo__title">Zachęcamy do kontaktu z nami, abyśmy mogli wspólnie pracować nad realizacją Państwa
           marzeń o doskonałej stronie
           internetowej</h4>
-        <a class="promo__button" href="#contact">Kontakt</a>
+        <a class="promo__button" href="contact.html">Kontakt</a>
       </div>
     </section>
-
-    <footer class="footer">
-      <p class="footer__copyright">©2023-2024 Full Development</p>
-    </footer>
   </main>
+
+  <footer class="footer">
+    <p class="footer__copyright">&copy;2023-2024 Full Development</p>
+  </footer>
+
   <script type="module" src="/src/main.ts"></script>
 </body>
 
