fix: fix link to the main page

--- a/public/contact.html
+++ b/public/contact.html
@@ -29,7 +29,7 @@
 <body>
   <header class="header">
     <div class="header__container">
-      <a class="header__logo-link" href="javascript:void(0)">
+      <a class="header__logo-link" href="/">
         <img class="header__logo" src="/src/assets/svg/logo.svg" alt="logo">
       </a>
       <nav class="header__nav">
